--- a/web/templates/main.gohtml
+++ b/web/templates/main.gohtml
@@ -5,6 +5,9 @@
     <title>rdnt.dev</title>
     <script src="https://unpkg.com/htmx.org@1.9.10"></script>
     <script src="https://unpkg.com/htmx.org/dist/ext/head-support.js"></script>
+    <script>
+        htmx.config.scrollBehavior = 'instant';
+    </script>
 
     <style data-component="reset">
         html, body, div, span, applet, object, iframe, h1, h2, h3, h4, h5, h6, p, blockquote, pre, a, abbr, acronym, address, big, cite, code, del, dfn, em, img, ins, kbd, q, s, samp, small, strike, strong, sub, sup, tt, var, b, u, i, center, dl, dt, dd, ol, ul, li, fieldset, form, label, legend, table, caption, tbody, tfoot, thead, tr, th, td, article, aside, canvas, details, embed, figure, figcaption, footer, header, hgroup, menu, nav, output, ruby, section, summary, time, mark, audio, video {
@@ -379,6 +382,14 @@
                 font-variant: normal;
                 text-transform: none;
             }
+            &:after {
+                font-family: 'icons' !important;
+                line-height: 1;
+                font-style: normal;
+                font-weight: normal;
+                font-variant: normal;
+                text-transform: none;
+            }
             &.github {
                 &:before {
                     content: "\e900";
@@ -410,7 +421,7 @@
                 }
             }
             &.arrow-right {
-                &:before {
+                &:after {
                     content: "\e906";
                 }
             }
@@ -730,19 +741,48 @@
         }
         .pagination .spacer {
             font-size: 1.1rem;
-            margin: 18px 0;
-            height: 2px;
-            width: 40px;
-            background-color: #7a7b8a;
+            /*margin: 18px 0;*/
+            width: 2ch;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            padding: 0 1ch;
+            margin: 0 0.5ch;
+            /*height: 2px;*/
+            /*width: 40px;*/
+            /*background-color: #7a7b8a;*/
+        }
+        .pagination .spacer:after {
+            content: '…';
+            display: inline;
+            position: relative;
+            top: 0;
+            left: 0;
+            padding: 0 1ch;
+            width: 2ch;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            /*height: 2px;*/
         }
         .pagination .page {
+            display: block;
             height: 40px;
             font-size: 1.1rem;
-            margin: 0 0.5ch;
+            margin: 0 .5ch;
+            padding: 0 1ch;
             cursor: pointer;
+            width: 2ch;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+        }
+        .pagination .page.disabled {
+            pointer-events: none;
+            opacity: 0.5;
         }
         .pagination .page .icon {
-            width: 3ch;
+            min-width: 3ch;
             font-size: 1.1rem;
             font-family: 'Hack', monospace;
             padding: 0;
@@ -759,15 +799,17 @@
             color: #20e9b7;
             display: flex;
             align-items: center;
-            padding: 0;
+            /*padding: 0;*/
             min-width: auto;
             border-radius: 3px;
+            /*border: 2px dashed #444;*/
+            border: 2px solid #61636f;
         }
         .pagination .page.current.disabled:after {
             content: none;
         }
         .pagination .page.current:after {
-            content: '';
+            /*content: '';*/
             display: block;
             position: absolute;
             bottom: 6px;
@@ -787,12 +829,12 @@
             line-height: 40px;
             border: none;
             font-size: 1.1rem;
-            color: #20e9b7;
+            /*color: #20e9b7;*/
             text-align: center;
             transition: color 0.3s ease;
         }
         .pagination .page.current input:focus {
-            color: #dadfe8;
+            /*color: #dadfe8;*/
             background: transparent !important;
         }
         .pagination .page.current input:disabled {
